alignment fix

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -354,7 +354,8 @@ a:last-of-type.btn:hover {
   font-weight: 300;
   color: #159957; }
 .main-content p {
-  margin-bottom: 1em; }
+  margin-bottom: 1em;
+  flex-basis: 100%; }
 .main-content code {
   padding: 2px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
